# c_helloworld

./: CMakeLists.txt  main.c  readme.md
